[project]
name = "pitstop"
version = "0.3.0"
description = "All-in-one F1 MCP Server"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Praneeth Ravuri", email = "ravpraneeth@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "fastmcp==3.4.2",
    "fastf1==3.8.3",
    "pydantic==2.13.4",
    "httpx[http2]==0.28.1",
    "feedparser==6.0.12",
    "python-dotenv==1.2.2",
    "hishel==1.3.0",
    "tenacity==9.1.4",
    "uvloop==0.22.1",
]

[project.scripts]
pitstop = "pitstop.server:main"

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-httpx==0.36.2",
    "ruff==0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitstop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
